# sei-dashboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  CompileIndicators.ps1  Dockerfile  OpenAdminPowerShell.md  README.md  TODO.md  cli-sei  pyproject.toml  relatorio-pericias.xlsx  relatorio_pericias.xlsx  requirements.txt  sample_relatorio.xlsx  uv.lock.bad
EngineDLL-GPU/: .gitattributes  .gitignore  Build.md  Build.ps1  CMakeLists.txt  CheckLinks.md  CheckLinks.ps1  DevSync.md  DevSync.ps1  GPUDevCLI.md  GPUDevCLI.ps1  OpenAdminPowerShell.md  OpenAdminPowerShell.ps1  README.md  RemoveLinks.md  RemoveLinks.ps1  SetupAgentTesterLinks.md  SetupAgentTesterLinks.ps1  SetupRuntimeLinks.md  SetupRuntimeLinks.ps1  WatchdogAfterCompile.md  WatchdogAfterCompile.ps1  links_config.json
EngineDLL-GPU/Dev/Experts/GPU/: GPU_EngineHub.md  GPU_EngineHub.mq5  GPU_EnginePing.md
EngineDLL-GPU/Dev/Include/GPU/: GPU_Shared.md  GPU_Shared.mqh  GPU_Subwindows.md  GPU_Subwindows.mqh
EngineDLL-GPU/Dev/Include/client_ipc/: GpuEngineClientApi.h  GpuEngineClientApi.md
EngineDLL-GPU/Dev/Include/engine_core/: CudaProcessor.md  GpuEngineCore.md  GpuEngineExports.md  GpuEngineJob.h  GpuEngineJob.md  GpuEngineTypes.h  GpuEngineTypes.md
EngineDLL-GPU/Dev/Include/ipc/: ServiceProtocol.md
EngineDLL-GPU/Dev/Include/service/: PipeServer.md  Service.md
EngineDLL-GPU/Dev/Indicators/GPU/: GPU_PhaseViz.md  GPU_PhaseViz_Solo.md  GPU_WaveViz.md  GPU_WaveViz.mq5  GPU_WaveViz_1.0.4.md  GPU_WaveViz_1.0.4.mq5  GPU_WaveViz_Solo.md
EngineDLL-GPU/Dev/Indicators/GPU/GPU_WaveViz/: ZigZag.md
EngineDLL-GPU/Dev/Indicators/pitchfork/: pitchfork_structure_helper.mq5
EngineDLL-GPU/Dev/docs/: windows_gpu_pipeline.md
EngineDLL-GPU/Dev/src/client_ipc/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/Dev/src/client_ipc/src/: Client.cpp  Client.md
EngineDLL-GPU/Dev/src/engine_core/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/Dev/src/engine_core/src/: CudaProcessor.cu  CudaProcessor.md  GpuEngineCore.cpp  GpuEngineCore.md  exports.md
EngineDLL-GPU/Dev/src/service/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/Dev/src/service/src/: PipeServer.md  Service.md  main.md
EngineDLL-GPU/backups/IncludeGPU_3CA1B4AB7DFED5C81B1C7F1007926D06_20251024_212125/: GPU_Engine.mqh  GPU_Hotkeys.mqh  GPU_Subwindows.mqh
EngineDLL-GPU/backups/IncludeGPU_D0E8209F77C8CF37AD8BF550E51FF075_20251024_212125/: GPU_Shared.mqh
EngineDLL-GPU/docs/: agents_tester_links.md  legacy_mql_gpu.md  system-overview.md
EngineDLL-GPU/legacy_mql_gpu_original_dev/: DeployDLL.bat  DeployDLL_Verify.bat  README_SpectralAnalysis.md
EngineDLL-GPU/legacy_mql_gpu_original_dev/Include/FFT/: GpuBridgeExtended.mqh  GpuParallelProcessor.mqh.broken  README_GpuParallel.md
EngineDLL-GPU/legacy_mql_gpu_original_dev/gpu/: BatchWaveformFft.cu  CMakeLists.txt  CwtKernels.cu  DeployGpuBridge.ps1  GPU_SETUP.md  GpuContext.cpp  GpuContext.h  GpuLogger.h  GpuStatus.cpp  build_vs.bat  exports.cpp
EngineDLL-GPU/legacy_mql_gpu_original_runtime/: DEPLOYMENT_STATUS.md  DeployDLL_Admin.ps1  FUNCIONALIDADES_DISPONIVEIS.md  README_GPU_ONLY.md
EngineDLL-GPU/legacy_mql_gpu_original_runtime/Include/FFT/: ExampleGpuOnly.mq5  ExampleGpuParallelUsage.mq5  GpuParallelProcessor.mqh
EngineDLL-GPU/legacy_mql_gpu_original_runtime/Libraries/: GpuBridge.dll.bak
EngineDLL-GPU/legacy_mql_gpu_original_runtime/gpu/: CMakeLists.txt  GpuContext.cpp  GpuContext.h  GpuLogger.cpp  SpectralAnalysisKernels.cu  SupDemKernels.cu  WaveformFft.cu  build.bat  build.ps1  build_direct.bat  build_with_cmake.bat  exports.h  rebuild_cuda.bat
EngineDLL-GPU/logs/: README.md
EngineDLL-GPU/runtime/Experts/GPU/: GPU_EngineHub.md  GPU_EnginePing.md  GPU_EnginePing.mq5
EngineDLL-GPU/runtime/Include/GPU/: GPU_Log.mqh  GPU_Shared.md  GPU_Subwindows.md
EngineDLL-GPU/runtime/Include/client_ipc/: GpuEngineClientApi.md
EngineDLL-GPU/runtime/Include/engine_core/: CudaProcessor.h  CudaProcessor.md  GpuEngineCore.h  GpuEngineCore.md  GpuEngineExports.h  GpuEngineExports.md  GpuEngineJob.md  GpuEngineTypes.md
EngineDLL-GPU/runtime/Include/ipc/: ServiceProtocol.md
EngineDLL-GPU/runtime/Include/service/: PipeServer.h  PipeServer.md  Service.md
EngineDLL-GPU/runtime/Indicators/GPU/: GPU_PhaseViz.md  GPU_PhaseViz.mq5  GPU_PhaseViz_Solo.md  GPU_PhaseViz_Solo.mq5  GPU_WaveViz.md  GPU_WaveViz_1.0.4.md  GPU_WaveViz_Solo.md  GPU_WaveViz_Solo.mq5
EngineDLL-GPU/runtime/Indicators/GPU/GPU_WaveViz/: ZigZag.md
EngineDLL-GPU/runtime/docs/: DeployGpuDLL.md  GpuEngine_API.md  GpuEngine_Streams.md  windows_gpu_pipeline.md
EngineDLL-GPU/runtime/src/client_ipc/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/runtime/src/client_ipc/src/: Client.md
EngineDLL-GPU/runtime/src/engine_core/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/runtime/src/engine_core/src/: CudaProcessor.md  GpuEngineCore.md  exports.cpp  exports.md
EngineDLL-GPU/runtime/src/service/: CMakeLists.md  CMakeLists.txt
EngineDLL-GPU/runtime/src/service/src/: PipeServer.md  Service.md  main.cpp  main.md
EngineDLL-GPU/tooling/python/: build_and_deploy_gpu.md  build_and_deploy_gpu.py  deploy_gpu_binaries.md  deploy_gpu_binaries.py
EngineDLL-GPU/watchdogs/: WatchdogFiles_dev_to_runtime.md  WatchdogFiles_dev_to_runtime.py  WatchdogLinks_runtime_m5folders.md  WatchdogLinks_runtime_m5folders.py
EngineDLL-GPU/waveviz_gpu_dev/gpu/: CMakeLists.txt  GpuStatus.h  WaveVizContext.cpp  WaveVizContext.h  WaveVizExports.cpp  WaveVizKernels.cu  WaveVizKernels.cuh  build.bat  dllmain.cpp
cli/: __init__.py  __main__.py  constants.py  examples.py  main.py  utils.py
docs/: Documentation_Instructions.md  PROCEDURE_NOTES.md  PROCESSO_SEI_PIPELINE.md  Tabela_original.xlsx  USAGE_GUIDE.md  honorarios_aliases.json  system-overview.md
grepo/: README.md  setup.py
logs/: audit-test-005719.sources.jsonl  audit-test-005719.state.json  audit-test-2-051328.sources.jsonl  audit-test-2-051328.state.json  export-dataset-052655.sources.jsonl  export-dataset-052655.state.json  extract-20251119-223443-af7dd5.state.json  extract-20251120-165621-912301.sources.jsonl  (+1 more)
(+95 files in other folders)
